# whatubinup2

./: .gitignore  .pylintrc  README.md  __init__.py  __main__.spec  buttons.py  docker-compose.yaml  main.py  pyproject.toml  requirements-html.txt  requirements-win.txt  requirements.txt  setup-win.py  setup.cfg  setup.py  template.html
.github/workflows/: branch.yaml  codeql.yml  generate-html.yaml  main.yaml
docs/: CNAME  index.html
docs/downloads/whatubinup2.app/Contents/: Info.plist
docs/downloads/whatubinup2.app/Contents/Frameworks/: libXau.6.dylib  libcrypto.1.1.dylib  liblzma.5.dylib  libmpdec.2.5.1.dylib  libopenjp2.2.5.0.dylib  libtcl8.6.dylib  libtiff.5.dylib  libtk8.6.dylib  libz.1.2.12.dylib
docs/downloads/whatubinup2.app/Contents/Frameworks/Python.framework/Versions/Current/: Python
docs/downloads/whatubinup2.app/Contents/MacOS/: whatubinup2
docs/downloads/whatubinup2.app/Contents/Resources/: __boot__.py  __main__.py
docs/downloads/whatubinup2.app/Contents/Resources/lib/python3.9/PySimpleGUI/: PySimpleGUI.py
docs/downloads/whatubinup2.app/Contents/Resources/lib/python3.9/cffi/: __init__.py  api.py  backend_ctypes.py  cparser.py  recompiler.py  vengine_cpy.py  vengine_gen.py
docs/downloads/whatubinup2.app/Contents/Resources/lib/python3.9/pep517/: build.py  check.py  (+3 more)
docs/downloads/whatubinup2.app/Contents/Resources/openssl.ca/: cert.pem
docs/static/: styles.css
img/: wubu2.icns
scripts/: build.sh  convert_markdown.py  generate_icns.sh
src/: template.html
src/whatubinup2/: __main__.py  file_ops.py  shows.py
whatubinup2/: main.py
(+7 files in other folders)
