[metadata]
name = whatubinup2
version = 0.1.2
app = main.py
description = Python desktop client for managing time logging
author = Tim Harrison
author_email = tim@tjth.co
url = https://github.com/teamjtharrison/what_u_bin_up_2
license = Creative Commons Attribution-Noncommercial-Share Alike license
long_description = open("README.md").read()
scripts = ['main']
long_description_content_type = text/markdown
install_requires = requirements.txt
